# cpp-perf

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CNAME  data.js  pixi.toml  styles.css  vcpkg.json
.github/workflows/: bench.yml
benchmarks/: CMakeLists.txt  bench_aliasing_model.cpp  bench_api_shape.cpp  bench_lookup_table.cpp  string_benchmark.cpp  utils.h
dev/bench/clang-arm64/: data.js
dev/bench/clang-x64/: data.js
dev/bench/gcc-arm64/: data.js
dev/bench/gcc-x64/: data.js
dev/bench/msvc-x64/: data.js
site/: app.js  index.html
tools/: merge_benchmarks.py
